fixed layout issues on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -15,21 +15,6 @@
   --border-light: 1px solid var(--color-gray-light-2);
 }
 
-@-webkit-keyframes pulsate {
-  0% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-  50% {
-    transform: scale(1.05);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
-  }
-  100% {
-    transform: scale(1);
-    box-shadow: none;
-  }
-}
-
 @keyframes pulsate {
   0% {
     transform: scale(1);
@@ -56,7 +41,7 @@ html {
   box-sizing: border-box;
   font-size: 62.5%;
 }
-@media only screen and (max-width: 68.75rem) {
+@media only screen and (max-width: 68.75em) {
   html {
     font-size: 50%;
   }
@@ -132,8 +117,7 @@ body {
 }
 .btn:focus {
   outline: none;
-  -webkit-animation: pulsate 1s infinite;
-          animation: pulsate 1s infinite;
+  animation: pulsate 1s infinite;
 }
 
 .gallery {
@@ -152,6 +136,11 @@ body {
   border-bottom: var(--border-light);
   display: flex;
   flex-wrap: wrap;
+}
+@media only screen and (max-width: 31.25em) {
+  .list {
+    padding: 3rem 0;
+  }
 }
 .list__item {
   flex: 0 0 50%;
@@ -175,6 +164,12 @@ body {
   align-items: center;
   border-bottom: var(--border-light);
 }
+@media only screen and (max-width: 376px) {
+  .overview {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
 .overview__heading {
   font-size: 2.25rem;
   font-weight: 300;
@@ -182,7 +177,7 @@ body {
   letter-spacing: 1px;
   padding: 1.5rem 3rem;
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .overview__heading {
     font-size: 1.8rem;
     padding: 1.25rem 2rem;
@@ -193,6 +188,14 @@ body {
   display: flex;
   align-items: center;
 }
+@media only screen and (max-width: 376px) {
+  .overview__stars {
+    order: 1;
+    padding-left: 2rem;
+    padding-bottom: 1.25rem;
+    margin-top: -1rem;
+  }
+}
 .overview__icon-star, .overview__icon-location {
   width: 1.75rem;
   height: 1.75rem;
@@ -202,6 +205,11 @@ body {
   font-size: 1.2rem;
   display: flex;
   align-items: center;
+}
+@media only screen and (max-width: 376px) {
+  .overview__location {
+    flex: 1 0 0;
+  }
 }
 .overview__icon-location {
   margin-right: 0.5rem;
@@ -218,9 +226,14 @@ body {
   margin-left: 3rem;
   padding: 0 2.25rem;
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .overview__rating {
     padding: 0 1.5rem;
+  }
+}
+@media only screen and (max-width: 376px) {
+  .overview__rating {
+    margin-left: 0;
   }
 }
 .overview__rating-average {
@@ -228,7 +241,7 @@ body {
   font-weight: 300;
   margin-bottom: -3px;
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .overview__rating-average {
     font-size: 1.8rem;
   }
@@ -266,13 +279,13 @@ body {
   overflow: hidden;
   justify-content: center;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .review {
     padding: 2rem;
     margin-bottom: 3rem;
   }
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .review {
     width: 100%;
   }
@@ -328,7 +341,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-@media only screen and (max-width: 31.25rem) {
+@media only screen and (max-width: 31.25em) {
   .search {
     order: 1;
     flex: 0 0 100%;
@@ -346,7 +359,7 @@ body {
   transition: width 0.2s, background-color 0.2s;
   margin-right: -3.5rem;
 }
-@media only screen and (max-width: 31.25rem) {
+@media only screen and (max-width: 31.25em) {
   .search__input {
     width: 85%;
   }
@@ -356,18 +369,10 @@ body {
   width: 100%;
   background-color: var(--color-gray-light-3);
 }
-@media only screen and (max-width: 31.25rem) {
+@media only screen and (max-width: 31.25em) {
   .search__input:focus {
     width: 95%;
   }
-}
-.search__input::-moz-placeholder {
-  font-weight: 100;
-  color: var(--color-gray-light-4);
-}
-.search__input:-ms-input-placeholder {
-  font-weight: 100;
-  color: var(--color-gray-light-4);
 }
 .search__input::placeholder {
   font-weight: 100;
@@ -445,7 +450,7 @@ body {
   align-items: center;
   font-size: 1.4rem;
 }
-@media only screen and (max-width: 31.25rem) {
+@media only screen and (max-width: 31.25em) {
   .header {
     flex-wrap: wrap;
     align-content: space-around;
@@ -467,17 +472,17 @@ body {
   border-bottom: var(--border-light);
   font-size: 1.4rem;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .information .detail {
     padding: 3rem;
   }
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .information .detail {
     flex-direction: column;
   }
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .information .detail {
     padding: 3rem 0;
   }
@@ -489,13 +494,13 @@ body {
   box-shadow: var(--shadow-light);
   padding: 3rem;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .information .description {
     padding: 2rem;
     margin-right: 3rem;
   }
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .information .description {
     margin-right: 0;
     margin-bottom: 3rem;
@@ -511,7 +516,7 @@ body {
   padding: 3.5rem 0;
   text-align: center;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .information .cta {
     padding: 2.5rem 0;
   }
@@ -534,7 +539,7 @@ body {
   list-style: none;
   margin-top: 3.5rem;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sidebar .side-nav {
     display: flex;
     margin-top: 0;
@@ -546,12 +551,12 @@ body {
 .sidebar .side-nav__item:not(:last-child) {
   margin-bottom: 0.5rem;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sidebar .side-nav__item:not(:last-child) {
     margin-bottom: 0;
   }
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sidebar .side-nav__item {
     flex: 1;
     margin-bottom: 0;
@@ -586,13 +591,13 @@ body {
   position: relative;
   z-index: 10;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sidebar .side-nav__link:link, .sidebar .side-nav__link:visited {
     justify-content: center;
     padding: 2rem;
   }
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .sidebar .side-nav__link:link, .sidebar .side-nav__link:visited {
     flex-direction: column;
     padding: 1.5rem;
@@ -604,7 +609,7 @@ body {
   margin-right: 2rem;
   fill: currentColor;
 }
-@media only screen and (max-width: 45rem) {
+@media only screen and (max-width: 45em) {
   .sidebar .side-nav__icon {
     margin-right: 0;
     width: 1.5rem;
@@ -616,7 +621,7 @@ body {
   padding: 2.5rem;
   color: var(--color-gray-light-4);
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .sidebar .legal {
     display: none;
   }
@@ -640,7 +645,7 @@ body {
   align-items: center;
   min-height: 100vh;
 }
-@media only screen and (max-width: 75rem) {
+@media only screen and (max-width: 75em) {
   body {
     align-items: flex-start;
   }
@@ -652,7 +657,7 @@ body {
   box-shadow: var(--shadow-dark);
   flex-grow: 1;
 }
-@media only screen and (max-width: 75rem) {
+@media only screen and (max-width: 75em) {
   .container {
     max-width: 100%;
   }
@@ -661,7 +666,7 @@ body {
 .content {
   display: flex;
 }
-@media only screen and (max-width: 56.25rem) {
+@media only screen and (max-width: 56.25em) {
   .content {
     flex-direction: column;
   }
