--- a/sass/components/_list.scss
+++ b/sass/components/_list.scss
@@ -8,6 +8,10 @@
     display: flex;
     flex-wrap: wrap;
 
+    @media only screen and (max-width: $bp-xs) {
+        padding: 3rem 0;
+    }
+
     &__item {
         flex: 0 0 50%;
         margin-bottom: 0.7rem;
