--- a/sass/components/_overview.scss
+++ b/sass/components/_overview.scss
@@ -3,6 +3,11 @@
     align-items: center;
     border-bottom: var(--border-light);
 
+    @media only screen and (max-width: 376px) {
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
     &__heading {
         font-size: 2.25rem;
         font-weight: 300;
@@ -20,6 +25,13 @@
         margin-right: auto;
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: 376px) {
+            order: 1;
+            padding-left: 2rem;
+            padding-bottom: 1.25rem;
+            margin-top: -1rem;
+        }
     }
 
     &__icon-star,
@@ -33,6 +45,10 @@
         font-size: 1.2rem;
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: 376px) {
+            flex: 1 0 0;
+        }
     }
 
     &__icon-location {
@@ -53,6 +69,10 @@
 
         @media only screen and (max-width: $bp-sm) {
             padding: 0 1.5rem;
+        }
+
+        @media only screen and (max-width: 376px) {
+            margin-left: 0;
         }
 
         &-average {
